--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,10 +1,8 @@
 plugins {
-    id "com.android.application"
-    // START: FlutterFire Configuration
+    id 'com.android.application'
     id 'com.google.gms.google-services'
-    // END: FlutterFire Configuration
-    id "kotlin-android"
-    id "dev.flutter.flutter-gradle-plugin"
+    id 'kotlin-android'
+    id 'dev.flutter.flutter-gradle-plugin'
 }
 
 def localProperties = new Properties()
@@ -26,7 +24,7 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace "com.example.messenger_test_task"
+    namespace 'com.example.messenger_test_task'
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
@@ -44,11 +42,8 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.messenger_test_task"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        applicationId 'com.example.messenger_test_task'
+        minSdkVersion 23
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -56,8 +51,6 @@ android {
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
         }
     }
@@ -67,4 +60,6 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+// Add your dependencies here
+}
