--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,15 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.10+1
   intl: ^0.19.0
-  firebase_core: ^2.24.2
-  cloud_firestore: ^4.14.0
+  firebase_core: ^3.1.0
+  cloud_firestore: ^5.0.1
+  image_picker: ^1.1.2
+  firebase_storage: ^12.0.1
+  file_picker: ^8.0.5
+  voice_message_package: ^2.2.1
+  record: ^5.1.1
+  path_provider: ^2.1.3
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_test:
@@ -48,7 +55,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
